feat: docker sandboxing doc